style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');

/*
* {
    border: red solid;
}
*/

body {
    font-family: "Roboto", sans-serif;
    display: flex;
    flex-direction: column;
    margin: 0;
    padding: 0;
}

p {
    font-size: 18px;
    color: #E5E7EB;
}

button {
    background-color: #3882F6;
    color: #F9FAF8;
    padding: 5px 25px;
    margin: 5px;
    border-radius: 5px;
    font-size: 14px;
    font-weight: 700;
    border-style: none;
}

.header,.main-banner,.footer {
    background-color: #1F2937;
    color: #E5E7EB;
    display: flex;
    padding: 15px 120px;
    flex: 1;
}

.lower-banner {
    padding: 15px 125px;
    flex: 1;
}

.header {
    justify-content: space-between;
    align-items: center;
    
}

.logo {
    font-size: 24px;
    font-weight: bolder;
    color: #F9FAF8;
    
}

.main-banner {
    justify-content: space-between;
}

.hero-text-wrapper {
    width: 475px;
}

#hero-text {
    font-size: 48px;
    font-weight: 900;
    color: #F9FAF8;
}

#hero-sub-text {
    margin: 5px;
}

.sign-up-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    background-color: #3882F6;
    border-radius: 5px;
    padding: 25px 20px;
    margin: 40px 0px;
}

.sign-up-text h3 {
    color: #F9FAF8;
    font-size: 20px;
    margin: 5px 20px;
}

.sign-up-text p {
    font-size: 14px;
    margin: 5px 20px;
}

.sign-up-wrapper button {
    height: 30px;
    border: #F9FAF8 2px solid;
}

.footer {
    align-items: center;
    justify-content: center;
}
a {
    text-decoration: none;
    color: #E5E7EB;
    font-size: 18px;
    margin: 0 8px;
}

